styles/tabs-nav.css
/* ... */
.nav {
  transition: 0.35s;
}

.nav:hover {
  left: 0;
}
.nav:hover .nav-title {
  rotate: 90deg;
  transition: 0.35s;
  padding-left: 1.5rem;
}

.nav-btn a:hover {
  text-decoration: none;
  color: rgb(255, 238, 0);
  text-shadow: 1px 1px 1px rgb(0, 0, 0);
  background: linear-gradient(
    0deg,
    rgba(0, 33, 66, 0.85) 2px,
    rgba(49, 61, 71, 0.85) 2px,
    rgba(49, 61, 71, 0.85) 94%,
    rgb(184, 238, 248)
  );
  border-bottom: 2px solid #1e222b;
  border-right: 1px solid #1e222b;
  box-shadow: inset 2px 2px 2px #1e222b;
}

@media screen and (max-width: 850px) {
  .nav-title {
    background: rgba(222, 229, 235, 1);
    padding: 0.25rem;
  }
}

/* ============
   ** Recipe Method Specific Styles **
   ============
*/
.recipe-links li {
  color: var(--clr-grey-4);
  padding: 0.5rem;
}
.recipe-links a:visited {
  color: var(--clr-grey-4);
}

/* ============
   ** Header **
   ============
*/
header a {
  color: var(--clr-grey-4);
}
header a:visited {
  color: var(--clr-grey-4);
}

.list-btn-wrapper {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  margin: 0 auto;
  margin-top: 1.25rem;
  max-width: 60vw;
  gap: 1rem;
}

.list-btn {
  display: flex;
  flex-direction: column;
  color: var(--clr-grey-4);
  border: 1px solid var(--clr-grey-9);
  border-radius: var(--radius-sml);
  /* margin: 0.5rem; */
  padding: 0.025rem 0.5rem;
  width: fit-content;
  margin: 0 auto;
}
.list-btn img {
  width: 32px;
  align-self: center;
}

.list-btn:hover {
  border: 1px solid var(--clr-yellow-golden-pale);
  box-shadow: 0px 0px 5px 1px var(--clr-yellow-golden);
  cursor: pointer;
}
.list-btn a {
  color: var(--clr-grey-4);
}
.list-btn a:visited {
  color: var(--clr-grey-4);
}

/* =====================
   ** Title with Icon **
   =====================
*/
.title-icon {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
}

.title-icon img {
  width: 32px;
  padding-bottom: 0.75rem;
}

/* ============
   ** Footer **
   ============
*/

footer {
  font-size: 0.8rem;
  color: var(--clr-grey-10);
  display: flex;
  flex-flow: row wrap;
  text-align: center;
  align-items: flex-end;
  justify-content: space-around;
  border-top: 1px solid var(--clr-grey-9);
  padding-bottom: 1rem;
  margin-top: 2rem;
}

footer p {
  padding-top: 0.5rem;
  margin: 0;
  list-style: none;
}
footer li {
  padding-top: 0.5rem;
}
footer a {
  color: var(--clr-grey-4);
}
footer a:visited {
  color: var(--clr-grey-4);
}

@media screen and (max-width: 650px) {
  footer {
    flex-flow: column wrap;
    align-items: center;
  }
}

/* =======================
   ** RECIPE GRID START **
   =======================
*/

.recipe-grid {
  display: grid;
  gap: 2rem;
  grid-template-columns: 1fr 1fr 1fr;
  /* justify-items: center; */
  align-items: start;
  margin: 0 auto;
  max-width: 1170px;
}

.recipe-grid div {
  display: flex;
  flex-wrap: wrap;
  border: 1px solid var(--clr-grey-9);
  border-radius: var(--radius);
  padding: 1rem;
  text-align: justify;
  /* background: url(../images/chopping-board.jpg) center no-repeat;
  background-size: contain; */
}

.recipe-grid .link:hover {
  border: 1px solid var(--clr-yellow-golden-pale);
  box-shadow: 0px 0px 5px 1px var(--clr-yellow-golden);
}

.recipe-grid img {
  display: flex;
  flex-direction: column;
  width: 75%;
  margin: 0 auto;
  border-radius: 50%;
  height: 200px;
  width: 200px;
  object-fit: cover;
  border: 2px solid var(--clr-grey-8);
  box-shadow: 0px 2px 4px 1px var(--clr-grey-1);
  background-color: var(--clr-black);
}

.recipe-grid a {
  margin: 0 auto;
}
.recipe-grid figcaption {
  color: var(--clr-grey-4);
  margin: 1rem auto 0;
  text-transform: capitalize;
}

/* 
      ==============
      ** Sausages **
      ==============
*/
/* ROW 1 */
.item-a {
  grid-column: 1 / 2;
  grid-row: 1 / 2;
}
.item-b {
  grid-column: 2 / 3;
  grid-row: 1 / 2;
}
.item-c {
  grid-column: 3 / 4;
  grid-row: 1 / 2;
}

/* ROW 2 */
.item-d {
  grid-column: 2 / 3;
  grid-row: 2 / 3;
}
.item-e {
  grid-column: 3 / 4;
  grid-row: 2 / 3;
}

/* 
      =============
      ** Chicken **
      =============
*/
/* ROW 3 */
.item-f {
  grid-column: 1 / 2;
  grid-row: 3 / 4;
}
.item-g {
  grid-column: 2 / 3;
  grid-row: 3 / 4;
}
.item-h {
  grid-column: 3 / 4;
  grid-row: 3 / 4;
}

/* ROW 4 */
.item-i {
  grid-column: 1 / 2;
  grid-row: 4 / 5;
}
.item-j {
  grid-column: 2 / 3;
  grid-row: 4 / 5;
}
.item-k {
  grid-column: 3 / 4;
  grid-row: 4 / 5;
}

/* 
      ==========
      ** Beef **
      ==========
*/
.item-l {
  grid-column: 1 / 2;
  grid-row: 5 / 6;
}
.item-m {
  grid-column: 3 / 4;
  grid-row: 5 / 6;
}

/* 
      ==========
      ** Pork **
      ==========
*/

.item-n {
  grid-column: 1 / 2;
  grid-row: 6 / 7;
}
.item-o {
  grid-column: 3 / 4;
  grid-row: 6 / 7;
}

/* 
      =================
      ** Vege' Bakes **
      =================
*/
.item-p {
  grid-column: 1 / 2;
  grid-row: 7 / 8;
}
.item-q {
  grid-column: 2 / 3;
  grid-row: 7 / 8;
}
.item-r {
  grid-column: 3 / 4;
  grid-row: 7 / 8;
}

/* 
      ==================
      ** Cheese Sauce **
      ==================
*/
.item-s {
  grid-column: 1 / 2;
  grid-row: 8 / 9;
}
.item-t {
  grid-column: 2 / 3;
  grid-row: 8 / 9;
}
.item-u {
  grid-column: 3 / 4;
  grid-row: 8 / 9;
}

/* 
      ==============
      ** Puddings **
      ==============
  */
.item-v {
  grid-column: 1 / 2;
  grid-row: 9 / 10;
}
.item-w {
  grid-column: 2 / 3;
  grid-row: 9 / 10;
}
.item-x {
  grid-column: 3 / 4;
  grid-row: 9 / 10;
}
/* ... */

